--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -20,6 +20,13 @@ found in the LICENSE file.
     'timeline_model_test.html',
     'timeline_track_test.html',
     'linux_perf_importer_test.html',
+    'linux_perf_cpufreq_parser_test.html',
+    'linux_perf_drm_parser_test.html',
+    'linux_perf_exynos_parser_test.html',
+    'linux_perf_i915_parser_test.html',
+    'linux_perf_power_parser_test.html',
+    'linux_perf_sched_parser_test.html',
+    'linux_perf_workqueue_parser_test.html',
     'trace_event_importer_test.html',
     'profiling_view_test.html',
     'timeline_test.html',
