--- a/trunk/src/timeline_analysis_test.html
+++ b/trunk/src/timeline_analysis_test.html
@@ -32,17 +32,18 @@ base.defineModule('timeline_analysis_test')
                'timeline'/* TODO(nduca): reduce dependency to selection and track */ )
     .runAllTests(function() {
 
+    var TimelineCounter = tracing.TimelineCounter;
+    var TimelineThread = tracing.TimelineThread;
+    var newSliceNamed = test_utils.newSliceNamed;
     var tests = {};
 
     function createSelectionWithSingleSlice() {
-      var events = [
-        {name: 'b', args: {}, pid: 52, ts: 629, cat: 'foo', tid: 53, ph: 'B'},
-        {name: 'b', args: {}, pid: 52, ts: 631, cat: 'foo', tid: 53, ph: 'E'},
-      ];
-      var model = new tracing.TimelineModel(events);
+      var model = new tracing.TimelineModel();
+      var t53 = model.getOrCreateProcess(52).getOrCreateThread(53);
+      t53.pushSlice(newSliceNamed('b', 0, 0.002));
 
       var t53track = new tracing.TimelineThreadTrack();
-      t53track.thread = model.processes[52].threads[53];
+      t53track.thread = t53;
 
       var selection = new tracing.TimelineSelection();
       t53track.addAllObjectsMatchingFilterToSelection(
@@ -121,6 +122,105 @@ base.defineModule('timeline_analysis_test')
       return selection;
     }
 
+    function createSelectionWithTwoSeriesSingleCounter() {
+      var events = [
+        {name: 'ctr', args: {'bytesallocated': 0, 'bytesfree': 25}, pid: 1,
+         ts: 0, cat: 'foo', tid: 1, ph: 'C', id: 0},
+        {name: 'ctr', args: {'bytesallocated': 10, 'bytesfree': 15}, pid: 1,
+         ts: 10, cat: 'foo', tid: 1, ph: 'C', id: 0},
+        {name: 'ctr', args: {'bytesallocated': 20, 'bytesfree': 5}, pid: 1,
+         ts: 20, cat: 'foo', tid: 1, ph: 'C', id: 0}
+      ];
+      var model = new tracing.TimelineModel(events);
+      var p = model.processes[1];
+      var ctr = model.processes[1].counters['foo.ctr[0]'];
+      assertEquals('ctr[0]', ctr.name);
+      assertEquals(3, ctr.numSamples);
+      assertEquals(2, ctr.numSeries);
+
+      var selection = new tracing.TimelineSelection();
+      var t1track = new tracing.TimelineThreadTrack();
+      selection.addCounterSample(t1track, ctr, 1);
+
+      return selection;
+    }
+
+    function createSelectionWithTwoSeriesTwoCounters() {
+      var ctr1 = new TimelineCounter(null, 0, 'ctr1');
+      ctr1.seriesNames.push('bytesallocated', 'bytesfree');
+      ctr1.seriesColors.push(0, 1);
+      ctr1.timestamps.push(0, 10, 20);
+      ctr1.samples.push(0, 25, 10, 15, 20, 5);
+
+      var ctr2 = new TimelineCounter(null, 0, 'ctr2');
+      ctr2.seriesNames.push('bytesallocated', 'bytesfree');
+      ctr2.seriesColors.push(0, 1);
+      ctr2.timestamps.push(0, 10, 20);
+      ctr2.samples.push(0, 25, 10, 15, 20, 5);
+
+      var selection = new tracing.TimelineSelection();
+      var t1track = new tracing.TimelineThreadTrack();
+      selection.addCounterSample(t1track, ctr1, 1);
+      selection.addCounterSample(t1track, ctr2, 2);
+
+      return selection;
+    }
+
+    function createSelectionWithTwoCountersDiffSeriesDiffHits() {
+      var ctr1 = new TimelineCounter(null, 0, 'a');
+      ctr1.seriesNames.push('bytesallocated');
+      ctr1.seriesColors.push(0);
+      ctr1.timestamps.push(0, 10, 20);
+      ctr1.samples.push(0, 25, 10);
+      assertEquals('a', ctr1.name);
+      assertEquals(3, ctr1.numSamples);
+      assertEquals(1, ctr1.numSeries);
+
+      var ctr2 = new TimelineCounter(null, 0, 'b');
+      ctr2.seriesNames.push('bytesallocated', 'bytesfree');
+      ctr2.seriesColors.push(0, 1);
+      ctr2.timestamps.push(0, 10, 20, 30);
+      ctr2.samples.push(0, 25, 10, 15, 20, 5, 25, 0);
+      assertEquals('b', ctr2.name);
+      assertEquals(4, ctr2.numSamples);
+      assertEquals(2, ctr2.numSeries);
+
+      var selection = new tracing.TimelineSelection();
+      var t1track = new tracing.TimelineThreadTrack();
+      selection.addCounterSample(t1track, ctr1, 1);
+      selection.addCounterSample(t1track, ctr2, 2);
+
+      return selection;
+    }
+
+    function createSelectionWithSingleSliceSingleCounter() {
+      var model = new tracing.TimelineModel();
+      var thread = model.getOrCreateProcess(1).getOrCreateThread(1);
+      thread.pushSlice(newSliceNamed('b', 1, 5));
+
+      var ctr1 = model.getOrCreateProcess(1).getOrCreateCounter('cat', 'ctr1');
+      ctr1.seriesNames.push('bytesallocated', 'bytesfree');
+      ctr1.seriesColors.push(0, 1);
+      ctr1.timestamps.push(0, 10, 20);
+      ctr1.samples.push(0, 25, 10, 15, 20, 5);
+      assertEquals('ctr1', ctr1.name);
+      assertEquals(3, ctr1.numSamples);
+      assertEquals(2, ctr1.numSeries);
+
+      var ctr1track = new tracing.TimelineCounterTrack();
+      ctr1track.counter = ctr1;
+
+      var threadTrack = new tracing.TimelineSliceTrack();
+      threadTrack.slices = thread.subRows[0];
+
+      var selection = new tracing.TimelineSelection();
+      selection.addCounterSample(ctr1track, ctr1, 1);
+      threadTrack.addAllObjectsMatchingFilterToSelection(
+        new tracing.TimelineFilter('b'), selection);
+      assertEquals(2, selection.length);
+      return selection;
+    }
+
     function appendTestResult(title, el) {
       var titleEl = document.createElement('div');
       titleEl.textContent = title;
@@ -152,6 +252,40 @@ base.defineModule('timeline_analysis_test')
       analysisEl.selection = selection;
 
       appendTestResult("Multiple non nested thread slices", analysisEl);
+    }
+
+    tests.testAnalysisViewWithMultipleSlicesSameTitle = function() {
+      var selection = createSelectionWithTwoSlicesSameTitle();
+
+      var analysisEl = new tracing.TimelineAnalysisView();
+      analysisEl.selection = selection;
+
+      appendTestResult("Multiple thread slices with same title", analysisEl);
+    }
+
+    tests.testAnalysisViewWithSingleCounterWithTwoSeries = function() {
+      var selection = createSelectionWithTwoSeriesSingleCounter();
+
+      var analysisEl = new tracing.TimelineAnalysisView();
+      analysisEl.selection = selection;
+      appendTestResult("Single counter with two series", analysisEl);
+    }
+
+    tests.testAnalysisViewWithTwoCountersWithTwoSeries = function() {
+      var selection = createSelectionWithTwoSeriesTwoCounters();
+
+      var analysisEl = new tracing.TimelineAnalysisView();
+      analysisEl.selection = selection;
+      appendTestResult("Multiple counters with two series", analysisEl);
+    }
+
+    tests.testAnalysisViewWithSingleSliceSingleCounter = function() {
+      var selection = createSelectionWithSingleSliceSingleCounter();
+
+      var analysisEl = new tracing.TimelineAnalysisView();
+      analysisEl.selection = selection;
+      appendTestResult("Single slice and single counter with two series",
+        analysisEl);
     }
 
     function StubAnalysisResults() {
@@ -190,12 +324,12 @@ base.defineModule('timeline_analysis_test')
                          time: time});
       },
 
-      appendSliceRow: function(table, label, duration, occurences, details) {
+      appendDataRow: function(table, label, duration, occurences, details) {
         table.rows.push({label: label,
                          duration: duration,
                          occurences: occurences,
                          details: details});
-      }
+      },
     };
 
     tests.testAnalyzeSelectionWithSingleSlice = function() {
@@ -205,7 +339,7 @@ base.defineModule('timeline_analysis_test')
       tracing.analyzeSelection_(results, selection);
       assertEquals(1, results.tables.length);
       var table = results.tables[0];
-      assertEquals('Selected item:', table.tableHeader);
+      assertEquals('Selected slice:', table.tableHeader);
       assertEquals(3, table.rows.length)
 
       assertEquals("b", table.rows[0].text);
@@ -236,7 +370,7 @@ base.defineModule('timeline_analysis_test')
 
       assertEquals("Selection start", table.rows[4].label);
       assertAlmostEquals(0, table.rows[4].time);
-      
+
       assertEquals("Selection extent", table.rows[5].label);
       assertAlmostEquals(0.18, table.rows[5].time);
     }
@@ -248,7 +382,7 @@ base.defineModule('timeline_analysis_test')
       tracing.analyzeSelection_(results, selection);
       assertEquals(1, results.tables.length);
       var table = results.tables[0];
-      
+
       assertEquals(undefined, table.tableHeader);
       assertEquals(8, table.rows.length)
 
@@ -278,7 +412,7 @@ base.defineModule('timeline_analysis_test')
       assertEquals(1, results.tables.length);
       var table = results.tables[0];
       assertEquals('Selected counter:', table.tableHeader);
-      assertEquals(3, table.rows.length)
+      assertEquals(3, table.rows.length);
 
       assertEquals("Title", table.rows[0].label);
       assertEquals("Timestamp", table.rows[1].label);
@@ -286,12 +420,51 @@ base.defineModule('timeline_analysis_test')
       assertEquals(10, table.rows[2].text);
     }
 
-    // TODO(brendalee): Test the case of a selection with multiple counters.
-    tests.testAnalyzeSelectionWithTwoCounters = function() {
+    tests.testAnalyzeSelectionWithBasicTwoSeriesTwoCounters = function() {
+      var selection = createSelectionWithTwoSeriesTwoCounters();
+
+      var results = new StubAnalysisResults();
+      tracing.analyzeSelection_(results, selection);
+      assertEquals(1, results.tables.length);
+      var table = results.tables[0];
+      assertEquals('Counters:', table.tableHeader);
+      assertEquals(4, table.rows.length);
+
+      assertEquals('ctr1: bytesallocated', table.rows[0].label);
+      assertEquals('ctr1: bytesfree', table.rows[1].label);
+      assertEquals('ctr2: bytesallocated', table.rows[2].label);
+      assertEquals('ctr2: bytesfree', table.rows[3].label);
     }
 
-    // TODO(tbd): Test the case of a selection with both counters and slices.
+    tests.testAnalyzeSelectionWithComplexSeriesTwoCounters = function() {
+      var selection = createSelectionWithTwoCountersDiffSeriesDiffHits();
+
+      var results = new StubAnalysisResults();
+      tracing.analyzeSelection_(results, selection);
+      assertEquals(1, results.tables.length);
+      var table = results.tables[0];
+      assertEquals('Counters:', table.tableHeader);
+      assertEquals(3, table.rows.length);
+
+      assertEquals('a: bytesallocated', table.rows[0].label);
+      assertEquals('b: bytesallocated', table.rows[1].label);
+      assertEquals('b: bytesfree', table.rows[2].label);
+    }
+
     tests.testAnalyzeSelectionWithCounterAndSlices = function() {
+      var selection = createSelectionWithSingleSliceSingleCounter();
+
+      var results = new StubAnalysisResults();
+      tracing.analyzeSelection_(results, selection);
+      assertEquals(2, results.tables.length);
+      var sliceTable = results.tables[0];
+      var counterTable = results.tables[1];
+
+      assertEquals('Selected slice:', sliceTable.tableHeader);
+      assertEquals(3, sliceTable.rows.length);
+
+      assertEquals('Selected counter:', counterTable.tableHeader);
+      assertEquals(4, counterTable.rows.length);
     }
 
     return tests;
