--- a/trunk/src/timeline_counter_test.html
+++ b/trunk/src/timeline_counter_test.html
@@ -19,12 +19,87 @@ base.defineModule('timeline_counter_test')
                'timeline_counter')
     .runAllTests(function() {
 
+  var TimelineCounter = tracing.TimelineCounter;
+
   var tests = {};
 
-  // Our unittest harness treats a lack of tests as a failure. So,
-  // leave a single empty test in place so that this passes. Remove this
-  // when an actual test is added.
-  tests.testPlaceholder = function() {
+
+
+  function createCounterWithTwoSeries() {
+    var ctr = new TimelineCounter(null, 0, 'myCounter');
+    ctr.seriesNames.push('a', 'b');
+    ctr.seriesColors.push(0, 1);
+    ctr.timestamps.push(0, 1, 2, 3);
+    ctr.samples.push(5, 10, 6, 15, 5, 12, 7, 16);
+    return ctr;
+  }
+
+  tests.testGetSampleStatisticsWithSingleSelection = function() {
+    var ctr = createCounterWithTwoSeries();
+    var ret = ctr.getSampleStatistics([0]);
+
+    assertEquals(5, ret[0].min);
+    assertEquals(5, ret[0].max);
+    assertEquals(5, ret[0].avg);
+    assertEquals(5, ret[0].start);
+    assertEquals(5, ret[0].end);
+
+    assertEquals(10, ret[1].min);
+    assertEquals(10, ret[1].max);
+    assertEquals(10, ret[1].avg);
+    assertEquals(10, ret[1].start);
+    assertEquals(10, ret[1].end);
+  }
+
+  tests.testGetSampleStatisticsWithMultipleSelections = function() {
+    var ctr = createCounterWithTwoSeries();
+    var ret = ctr.getSampleStatistics([0, 1]);
+
+    assertEquals(5, ret[0].min);
+    assertEquals(6, ret[0].max);
+    assertEquals((5 + 6) / 2, ret[0].avg);
+    assertEquals(5, ret[0].start);
+    assertEquals(6, ret[0].end);
+
+    assertEquals(10, ret[1].min);
+    assertEquals(15, ret[1].max);
+    assertEquals((10 + 15) / 2, ret[1].avg);
+    assertEquals(10, ret[1].start);
+    assertEquals(15, ret[1].end);
+  }
+
+  tests.testGetSampleStatisticsWithOutofOrderIndices = function() {
+    var ctr = createCounterWithTwoSeries();
+    var ret = ctr.getSampleStatistics([1, 0]);
+
+    assertEquals(5, ret[0].min);
+    assertEquals(6, ret[0].max);
+    assertEquals((5 + 6) / 2, ret[0].avg);
+    assertEquals(5, ret[0].start);
+    assertEquals(6, ret[0].end);
+
+    assertEquals(10, ret[1].min);
+    assertEquals(15, ret[1].max);
+    assertEquals((10 + 15) / 2, ret[1].avg);
+    assertEquals(10, ret[1].start);
+    assertEquals(15, ret[1].end);
+  }
+
+  tests.testGetSampleStatisticsWithAllSelections = function() {
+    var ctr = createCounterWithTwoSeries();
+    var ret = ctr.getSampleStatistics([1, 0, 2, 3]);
+
+    assertEquals(5, ret[0].min);
+    assertEquals(7, ret[0].max);
+    assertEquals((5 + 6 + 5 + 7) / 4, ret[0].avg);
+    assertEquals(5, ret[0].start);
+    assertEquals(7, ret[0].end);
+
+    assertEquals(10, ret[1].min);
+    assertEquals(16, ret[1].max);
+    assertEquals((10 + 15 + 12 + 16) / 4, ret[1].avg);
+    assertEquals(10, ret[1].start);
+    assertEquals(16, ret[1].end);
   }
 
   return tests;
