Fix calcdeps parsing of stylesheets that follow dependencies.
BUG=24

Review URL: https://codereview.appspot.com/6374066

--- a/trunk/src/about_tracing.html
+++ b/trunk/src/about_tracing.html
@@ -33,6 +33,7 @@ body {
 
 </style>
 <link rel="stylesheet" href="timeline.css">
+<link rel="stylesheet" href="timeline_analysis.css">
 <link rel="stylesheet" href="overlay.css">
 <link rel="stylesheet" href="timeline_view.css">
 <link rel="stylesheet" href="tracing_controller.css">
