--- a/trunk/src/timeline_cpu_test.html
+++ b/trunk/src/timeline_cpu_test.html
@@ -45,6 +45,20 @@ base.defineModule('timeline_cpu_test')
     assertEquals(ctrBar2, ctrBar);
   }
 
+  tests.testShiftTimestampsForward = function() {
+    var cpu = new TimelineCpu(undefined, 1);
+    var ctr = cpu.getOrCreateCounter('foo', 'bar');
+    cpu.slices.push(new TimelineSlice('a', 0, 1, {}, 3));
+    var shiftCount = 0;
+    ctr.shiftTimestampsForward = function(ts) {
+      if (ts == 0.32)
+        shiftCount++;
+    };
+    cpu.slices.push(new TimelineSlice('a', 0, 1, {}, 3));
+    cpu.shiftTimestampsForward(0.32);
+    assertEquals(shiftCount, 1);
+    assertEquals(1.32, cpu.slices[0].start);
+  }
   return tests;
 });
 </script>
