Cleanup linux perf tracing after overhaul.
Various cleanups after the fact:
o track subclasses of LinuxPerfParser there so everyone can depend
  on linux_perf_importer instead of linux_perf_*_parser
o remove dead refs to TestExports
o document LinuxPerfParser subclassing

BUG=none
TEST=unit tests and check old traces still load properly

Change-Id: Ib2e3f07e73360c7f8dbc4f850bc08fef06ae56af

Review URL: https://codereview.appspot.com/6401043

--- a/trunk/src/linux_perf_power_parser_test.html
+++ b/trunk/src/linux_perf_power_parser_test.html
@@ -16,7 +16,7 @@ found in the LICENSE file.
 base.defineModule('linux_perf_power_parser_test')
     .dependsOn('unittest',
                'test_utils',
-               'linux_perf_power_parser')
+               'linux_perf_importer')
     .runAllTests(function() {
 
 var tests = {};
