--- a/trunk/src/linux_perf_i915_parser_test.html
+++ b/trunk/src/linux_perf_i915_parser_test.html
@@ -16,7 +16,7 @@ found in the LICENSE file.
 base.defineModule('linux_perf_i915_parser_test')
     .dependsOn('unittest',
                'test_utils',
-               'linux_perf_i915_parser')
+               'linux_perf_importer')
     .runAllTests(function() {
 
 var tests = {};
