--- a/trunk/src/timeline_async_slice_group_test.html
+++ b/trunk/src/timeline_async_slice_group_test.html
@@ -132,6 +132,37 @@ base.defineModule('timeline_async_slice_group_test')
     assertEquals(g.slices[1], subGroups[1].slices[0]);
   }
 
+  tests.testAsyncSlice_toJSON = function() {
+    var js = [
+      '{',
+      '  "title" : "a",',
+      '  "start" : 0,',
+      '  "colorId" : 0,',
+      '  "didNotFinish" : false,',
+      '  "duration" : 1,',
+      '  "startThread" : "1:1",',
+      '  "endThread" : "1:1",',
+      '  "subSlices" : [ {',
+      '        "title" : "a",',
+      '        "start" : 0,',
+      '        "colorId" : 0,',
+      '        "didNotFinish" : false,',
+      '        "duration" : 1,',
+      '        "startThread" : "1:1",',
+      '        "endThread" : "1:1"',
+      '      } ]',
+      '}'].join('\n');
+    // Modify whitespace of "js" so that string compare with another
+    // JSON.stringified version can succeed.
+    js = JSON.stringify(JSON.parse(js));
+
+    var p1 = new TimelineProcess(1);
+    var t1 = new TimelineThread(p1, 1);
+    var s = newAsyncSlice(0, 1, t1, t1);
+
+    assertEquals(js, JSON.stringify(s));
+  }
+
   return tests;
 });
 </script>
