--- a/trunk/src/timeline_model_test.html
+++ b/trunk/src/timeline_model_test.html
@@ -37,6 +37,33 @@ var TimelineThread = tracing.TimelineThread;
 var TimelineModel = tracing.TimelineModel;
 var TimelineFilter = tracing.TimelineFilter;
 
+var createModelWithOneOfEverything = function() {
+  var m = new TimelineModel();
+  var cpu = m.getOrCreateCpu(1);
+  cpu.slices.push(new TimelineSlice('a', 0, 1, {}, 3));
+
+  var p = m.getOrCreateProcess(1)
+  var t = p.getOrCreateThread(1);
+  t.pushSlice(new TimelineThreadSlice('a', 0, 1, {}, 4));
+  t.asyncSlices.push(test_utils.newAsyncSlice(0, 1, t, t));
+
+  var c = p.getOrCreateCounter("ProcessCounter");
+  c.seriesNames.push('a', 'b');
+  c.seriesColors.push(0, 1);
+  c.timestamps.push(0, 1, 2, 3);
+  c.samples.push(5, 10, 6, 15, 5, 12, 7, 16);
+
+  var c1 = cpu.getOrCreateCounter("CpuCounter");
+  c1.seriesNames.push('a', 'b');
+  c1.seriesColors.push(0, 1);
+  c1.timestamps.push(0, 1, 2, 3);
+  c1.samples.push(5, 10, 6, 15, 5, 12, 7, 16);
+
+  m.updateBounds();
+
+  return m;
+}
+
 tests.testModelBounds_EmptyModel = function() {
   var m = new TimelineModel();
   m.updateBounds();
@@ -111,6 +138,11 @@ tests.testTimelineFilter = function() {
   assertTrue(new TimelineFilter('a').matchSlice(s1));
   assertTrue(new TimelineFilter('ba').matchSlice(s1));
   assertFalse(new TimelineFilter('x').matchSlice(s1));
+}
+
+tests.testTimelineModel_toJSON = function() {
+  var m = createModelWithOneOfEverything();
+  assertNotNull(JSON.stringify(m));
 }
 
   return tests;
