Add a findAllThreadsNamed method to TimelineModel.
BUG=chromium:137356
TEST=unit test

Review URL: https://codereview.appspot.com/6419047

--- a/trunk/src/timeline_model_test.html
+++ b/trunk/src/timeline_model_test.html
@@ -145,6 +145,19 @@ tests.testTimelineModel_toJSON = function() {
   assertNotNull(JSON.stringify(m));
 }
 
+tests.testTimelineModel_findAllThreadsNamed = function() {
+  var m = new TimelineModel();
+  var t = m.getOrCreateProcess(1).getOrCreateThread(1);
+  t.name = 'CrBrowserMain';
+
+  m.updateBounds();
+  console.log(m);
+  var f = m.findAllThreadsNamed('CrBrowserMain');
+  assertArrayEquals([t], f);
+  f = m.findAllThreadsNamed('NoSuchThread');
+  assertEquals(0, f.length);
+}
+
   return tests;
 });
 </script>
